force-app/main/default/objects/Attendee__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>This field contains Company Name of the Attendee</description>
    <inlineHelpText>Provide Company Name of the Attendee</inlineHelpText>
    <label>Company</label>
    <length>50</length>
    <type>Text</type>
</CustomField>