force-app/main/default/objects/Attendee__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>This field contains Email of the Event</description>
    <inlineHelpText>Provide Email of the Event</inlineHelpText>
    <label>Email</label>
    <type>Phone</type>
</CustomField>