force-app/main/default/objects/Attendee__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains Address of the Attendee</description>
    <inlineHelpText>Provide Address of the Attendee</inlineHelpText>
    <label>Location</label>
    <referenceTo>Address_Book__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>