force-app/main/default/objects/Attendee__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>This field contains Phone of the Attendee</description>
    <inlineHelpText>Provide Phone of the Attendee</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>